<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingPage"
    android:background="@color/colorPrimary"
    tools:context=".view.Splashscreen">

    <GridLayout
        android:layout_marginTop="@dimen/margin30"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titlesplash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center|bottom"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_font" />

    </GridLayout>


    <GridLayout
        android:layout_width="250dp"
        android:layout_height="243dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin20"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_splash" />

    </GridLayout>


    <GridLayout
        android:layout_marginTop="@dimen/margin50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleCompany"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center|bottom"
            android:text="@string/company_name"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_font" />

    </GridLayout>


    <GridLayout
        android:layout_marginTop="@dimen/margin50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center|bottom"
            android:text="@string/copyright"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_font" />

    </GridLayout>
</LinearLayout>
