<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingPage"
    android:background="@color/colorPrimary"
    android:weightSum="1">

    <GridLayout
        android:layout_marginTop="@dimen/margin20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center|bottom"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_font" />

    </GridLayout>

    <GridLayout
        android:layout_marginTop="@dimen/margin50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin10">
            <EditText android:id="@+id/txtUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/user_nip" />
        </android.support.design.widget.TextInputLayout>

    </GridLayout>

    <GridLayout
        android:layout_marginTop="@dimen/margin10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin10">
            <EditText android:id="@+id/txtUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:hint="@string/user_password" />
        </android.support.design.widget.TextInputLayout>

    </GridLayout>

    <GridLayout
        android:layout_marginTop="@dimen/margin10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginBottom="@dimen/margin20"
            android:padding="@dimen/padding10"
            android:background="@color/white"
            android:textColor="@color/primary"
            android:text="@string/btn_login"/>


        <!-- reg id -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10">
            <EditText android:id="@+id/reg_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/margin10">
            <EditText android:id="@+id/txtIp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

    </GridLayout>

</LinearLayout>